--- a/StatickeProlinkovaneStranky/style.css
+++ b/StatickeProlinkovaneStranky/style.css
@@ -1,3 +1,80 @@
 
-img{height: 200px}
+img{
+    height: 200px;
+}
+p{
+    width: 50%;
     
+}
+
+body{
+    padding-left: 2%;
+}
+th, td {
+    border: 1px solid black;
+    padding: 6px;
+    
+}
+
+th{
+    background-color: #DC7633;
+  color: white;
+}
+table {
+    border-collapse: collapse;
+    
+}
+ul.menu{
+    padding-left: 0;
+}
+ul.menu li{
+    display: inline;
+}
+.menu a{
+    background-color: lightblue;
+    padding: 5px 10px;
+    margin: 5px 10px 5px 0;
+    text-decoration: none;
+}
+.menu a:hover{
+    background-color: rgb(104, 191, 218);
+    padding: 7px 12px;
+}
+.menu a.active{
+    background-color: cyan;
+}
+.heroHousle {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    background-image: url(./Housle.jpg);
+    background-size: cover ;
+    background-position: center;
+}
+.heroViola {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    background-image: url(./Viola.jpg);
+    background-size: cover ;
+    background-position: center;
+}
+.heroVioloncello {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    background-image: url(./Violoncello.jpg);
+    background-size: cover ;
+    background-position: center;
+}
+.heroKontrabas {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    background-image: url(./Kontrabas.jpg);
+    background-size: cover ;
+    background-position: center;
+}
+.hero img {
+
+}
